# print-monitor-local

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  build.ps1  pyproject.toml
.github/workflows/: ci.yml
data/: .gitkeep
docs/: arquitetura.md  descoberta-rede.md  empacotamento.md  exemplo-impressoras.csv  limitacoes-fabricantes.md
docs/obsidian/: comandos-uteis.md  decisões-tecnicas.md  indice.md  riscos-e-limitacoes.md  roadmap.md  visão-geral.md
scripts/: agendar-coleta.ps1  pm_entry.py  run.ps1  seed.py
src/print_monitor/: __init__.py  __main__.py  cli.py  collector.py  config.py  db.py  discovery.py  exports.py  imports.py  models.py  printers.py  reports.py  snmp.py
src/print_monitor/web/: __init__.py
src/print_monitor/web/templates/: base.html  discover.html  index.html  printers.html
tests/: conftest.py  test_collector.py  test_config.py  test_db.py  test_discovery.py  test_exports.py  test_filters.py  test_imports.py  test_printers.py  test_reports.py  test_snmp.py  test_web.py
